--- a/views/index.html
+++ b/views/index.html
@@ -81,9 +81,11 @@
     </div>
   </div>
 </div>
-<script>
+<!-- <script>
   var hotels = {{ templateHotels | dump | safe }};
   var restaurants = {{ templateRestaurants | dump | safe }};
   var activities = {{ templateActivities | dump | safe }};
-</script>
+</script> -->
+ <script src="/js/ajaxApi.js"></script>
+
 {% endblock %}
